# Project_Work_26P28

./: README.md
control_system/regressor/: run_regressor_windows.ps1
control_system_2/: README.md
control_system_2/data/: README.md
control_system_2/embedded/: prj.conf
control_system_2/outputs_regressor/: regressor_model.pkl
control_system_2/python/: export_test_data.py  run_python_pipeline.sh  stream_data.py  train_regressor.py
control_system_UART/: README.md
control_system_UART/data/: README.md
control_system_UART/embedded/: CMakeLists.txt  app.overlay
control_system_UART/outputs_regressor/: regressor_feature_names.json  regressor_test_vectors.json
control_system_UART/python/: run_python_pipeline.bat  split_database.py  train_regressor.py
control_system_USB/: README.md
control_system_USB/data/: README.md
control_system_USB/embedded/: app.overlay  prj.conf
control_system_USB/outputs_regressor/: regressor_model.pkl  regressor_test_vectors.json
control_system_USB/python/: export_regressor.py  run_python_pipeline.bat  run_python_pipeline.sh  stream_data.py  train_regressor.py
notebooks/: temp
sandbox/: README.md
sandbox/Casper/: build_database_reps_separation.ipynb  pipeline.ipynb  regressor.ipynb
sandbox/control_system/: python_pipeline
sandbox/fathia/: KNN_RIDGE_fixed.ipynb
sandbox/fathia/pipeline_ann/: CMakeLists.txt  README.md  export_test_data.py
sandbox/fathia/pipeline_ann/src/: main.c  model_regressor.h  pipeline_config.h  test_data.h
testing/Casper/: build_database.ipynb  classifier.ipynb
testing/Junzhe/: README.md  (+1 more)
(+69 files in other folders)
